// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiBankTransaction should show a bank transaction without fees 1`] = `
<litransaction-stub
  block="500"
  color="#ED553B"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Sent
      
    <b>
      12,340 
    </b>
     
    <span>
      ATOM
    </span>
  </div>
   
  <span>
    
        To yourself!
      
  </span>
</litransaction-stub>
`;

exports[`LiBankTransaction should show bank transaction when user hasn't signed in 1`] = `
<litransaction-stub
  block="500"
  color="#ED553B"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Sent
      
    <b>
      12,340
    </b>
     
    <span>
      ATOM
    </span>
  </div>
   
  <span>
    
        From
        
    <bech32-stub
      address="A"
    />
     to
        
    <bech32-stub
      address="B"
    />
  </span>
</litransaction-stub>
`;

exports[`LiBankTransaction should show incoming transactions 1`] = `
<litransaction-stub
  block="500"
  color="#ED553B"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Received
      
    <b>
      12,340 
    </b>
     
    <span>
      ATOM
    </span>
  </div>
   
  <span>
    From 
    <bech32-stub
      address="A"
    />
  </span>
</litransaction-stub>
`;

exports[`LiBankTransaction should show outgoing transactions 1`] = `
<litransaction-stub
  block="500"
  color="#ED553B"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Sent
      
    <b>
      12,340 
    </b>
     
    <span>
      ATOM
    </span>
  </div>
   
  <span>
    
        To
        
    <bech32-stub
      address="A"
    />
  </span>
</litransaction-stub>
`;

exports[`LiBankTransaction should show outgoing transactions send to herself 1`] = `
<litransaction-stub
  block="500"
  color="#ED553B"
  fees="[object Object]"
  memo="TESTING (Sent via Lunie)"
  time="1970-01-01T00:00:42.000Z"
>
  <div>
    
      Sent
      
    <b>
      12,340 
    </b>
     
    <span>
      ATOM
    </span>
  </div>
   
  <span>
    
        To yourself!
      
  </span>
</litransaction-stub>
`;
